# eventbrite-cli

./: .gitignore  README.md  pyproject.toml  shell.nix
eb/: BrowserSession.py  CachedCookieJar.py  __main__.py
