[project]
name = "eventbrite-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-cookie3",
    "bs4>=0.0.2",
    "html5lib>=1.1",
    "requests>=2.32.3",
    "typer>=0.15.1",
]

[tool.uv.sources]
browser-cookie3 = { git = "https://github.com/borisbabic/browser_cookie3.git", rev = "refs/pull/215/head" }
